# Vielsprachig

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  embf.h  emscripten_spec.cpp  emscripten_spec.h  lexi_conjugator.cpp  lexi_find.cpp  lexicon.cpp  lexicon.h  main.cpp  phono.cpp  phono.hpp  pos.cpp  pos.h  pos_reged.cpp  shell.emscripten.html
